# Siemens_U273_Limiter

./: .gitattributes  .gitignore  Cytomic ADC Conf Mega Detailed.txt  Etape 31 - Unit tests datasheet et comparatifs U273.txt  README.md
Etapes de Developpement/: Claude's plan for U273.txt  Etape 1 - B6 netlist parametrique Siemens U273.txt  Etape 10 - Audit R14 C6 DC AC Siemens U273.txt  Etape 14 - Crop global B11 C5 R17 S6 Siemens U273.txt  Etape 19 - Plan general finalisation schema Siemens U273.txt  Etape 2 - B11 S6 Zcmd provisoire Siemens U273.txt  Etape 20 - Lecture nouvelles photos S6 144312 144343 Siemens U273.txt  Etape 22 - Lecture S7 ZL10 SSD55 B30 Siemens U273.txt  Etape 25 - Orchestrateur netlist et DC global reference Siemens U273.txt  Etape 26 - Netlist B6 complete et solveurs globaux Siemens U273.txt  Etape 30 - Solveur state-space component-level U273.txt  Etape 5 - S7 ferme et linearisation B11 actif Siemens U273.txt  Etape 8 - Solveur hypotheses broches Ts1 Ts2 B11 Siemens U273.txt  Etape 9 - R14 N05 et noeuds caches Ts1 Ts2 Siemens U273.txt  Execution MNA pont B6 Siemens U273.txt  Gpt Mna linearAnalysis conclusion.txt  KCL,KVL Siemens U273.txt  MNA AC B11 S6 Siemens U273.txt  MNA B11 Regelverstaerker Siemens U273.txt  MNA Pont B6 Siemens U273 - document final.txt  MNA autres noeuds B6 Siemens U273.txt  Retranscription Siemens U273 Lmter.txt  Verification scientifique externe calculs U273.txt  analog_modeling_guide.md
results/: Etape 11 - KCL N05 courant actif requis Siemens U273.txt  Etape 12 - Correction crop Ts1 Ts2 B11 Siemens U273.txt  Etape 13 - Confirmation R16 et N05 B11 Siemens U273.txt  Etape 15 - Lecture zoom S6 B11 Siemens U273.txt  Etape 16 - Lecture pages theorie limiteur Siemens U273.txt  Etape 17 - Donnees techniques diode bridge U273.txt  Etape 18 - Plan scientifique MNA U273 Siemens U273.txt  Etape 19 - Plan general finalisation schema Siemens U273.txt  Etape 21 - Note Drahtbruecken S6 Vorentzerrung Siemens U273.txt  Etape 23 - Integration B6 diode empirique Siemens U273.txt  Etape 24 - Port B11 S6 S7 et transistors B6 Siemens U273.txt  Etape 27 - Plan software plugin JUCE VST AU Siemens U273.txt  b11_active_hybrid_pi_inventory.csv  (+91 more)
u273-plugin/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_and_demo.ps1
u273-plugin/Demo/: README.md
u273-plugin/cmake/: U273Compiler.cmake
u273-plugin/docs/: ARCHITECTURE.md  B6_B11_ACTIVE_CLOSURE_PLAN.md  RUN_LOCAL.md  SONIC_TARGET_V1.md  STATE_SPACE_SOLVER.md  TEST_STRATEGY.md  THD_GOLDEN_DERIVATION.md
u273-plugin/modules/u273_assets/: CMakeLists.txt
u273-plugin/modules/u273_assets/calibration/: model_boundary.json  u273_component_priors_v1.json  u273_harmonic_target_v1.csv  u273_sonic_target_v1.json  u273_thd_texture_target_v1.csv
u273-plugin/modules/u273_assets/presets/: README.md
u273-plugin/modules/u273_core/: CMakeLists.txt
u273-plugin/modules/u273_core/include/u273/core/: AudioBlockView.h  Constants.h  Math.h  MeterFrame.h  ModelBoundary.h  ParameterIds.h  ParameterSnapshot.h  ProcessContext.h  U273Core.h
u273-plugin/modules/u273_dsp/: CMakeLists.txt
u273-plugin/modules/u273_dsp/include/u273/dsp/: AnalogRealtimeEngine.h  B6BridgeRealtimeModel.h  DetectorEnvelope.h  FullActiveRealtimeEngine.h  GainCellDeltaPath.h  GainReductionComputer.h  LinearPhaseFirResampler.h  NominalReductionTable.h  RateGraph.h  RealtimeDetailLevel.h  RealtimeGainReductionModel.h  TableReductionRealtimeEngine.h  U273DspEngine.h
u273-plugin/modules/u273_dsp/src/: AnalogRealtimeEngine.cpp  B6BridgeRealtimeModel.cpp  DetectorEnvelope.cpp  FullActiveRealtimeEngine.cpp  GainCellDeltaPath.cpp  GainReductionComputer.cpp  LinearPhaseFirResampler.cpp  NominalReductionTable.cpp  RateGraph.cpp  TableReductionRealtimeEngine.cpp  U273DspEngine.cpp
u273-plugin/modules/u273_plugin/: CMakeLists.txt
u273-plugin/modules/u273_plugin/include/u273/plugin/: MeterBridge.h  ParameterBridge.h  PluginEditor.h  PluginProcessor.h  PresetManager.h
u273-plugin/modules/u273_plugin/src/: MeterBridge.cpp  ParameterBridge.cpp  PluginEditor.cpp  PluginProcessor.cpp  PresetManager.cpp
u273-plugin/modules/u273_reference/: CMakeLists.txt
u273-plugin/modules/u273_reference/include/u273/reference/: GoldenValidationSuite.h  ReferenceValidator.h  ScientificReferenceModel.h  U273TechnicalSpecs.h
u273-plugin/modules/u273_reference/include/u273/reference/calibration/: ActiveModelParameterMapping.h  ActiveModelParameters.h  ActiveTopologyCandidate.h  ActiveTopologyEvaluator.h  ActiveTopologyInventory.h  B6B11CalibrationRunner.h  B6SmallSignalAcReference.h  BoundedCalibrationSolver.h  CalibrationDataset.h  CalibrationReport.h  CalibrationResiduals.h  IdentifiabilityAnalyzer.h  LinearizedAcSolver.h  OperatingPointSolver.h  ReductionBuilder.h  SonicTarget.h  ThdBench.h  TransientReferenceSolver.h
u273-plugin/modules/u273_reference/include/u273/reference/state_space/: CircuitGraph.h  ComponentModels.h  Matrix.h  NewtonSolver.h  StateSpaceSolver.h  U273NetlistLoader.h  U273ReferenceCircuitBuilder.h
u273-plugin/modules/u273_reference/src/: GoldenValidationSuite.cpp  ReferenceValidator.cpp  ScientificReferenceModel.cpp
u273-plugin/modules/u273_reference/src/calibration/: ActiveModelParameterMapping.cpp  ActiveTopologyCandidate.cpp  ActiveTopologyEvaluator.cpp  ActiveTopologyInventory.cpp  B6B11CalibrationRunner.cpp  B6SmallSignalAcReference.cpp  BoundedCalibrationSolver.cpp  CalibrationDataset.cpp  CalibrationResiduals.cpp  IdentifiabilityAnalyzer.cpp  LinearizedAcSolver.cpp  OperatingPointSolver.cpp  ReductionBuilder.cpp  SonicTarget.cpp  ThdBench.cpp  TransientReferenceSolver.cpp
u273-plugin/modules/u273_reference/src/state_space/: CircuitGraph.cpp  ComponentModels.cpp  Matrix.cpp  NewtonSolver.cpp  StateSpaceSolver.cpp  U273NetlistLoader.cpp  U273ReferenceCircuitBuilder.cpp
u273-plugin/releases/Beta_1.0/: README.md
u273-plugin/scripts/: run_demo_bench.ps1
u273-plugin/tests/: CMakeLists.txt  main.cpp
u273-plugin/tools/u273_ac_probe/: CMakeLists.txt  main.cpp
u273-plugin/tools/u273_bench/: CMakeLists.txt  main.cpp
(+66 files in other folders)
